--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,5 +11,17 @@
   <% end %>
 </ul>
 
+<% @post.comments.each do |comment| %>
+  <p><%= comment.content %></p>
+<% end %>
+
+<h3>Submit a Comment</h3>
+<%= form_for @comment do |f| %>
+  <%= f.label :content %>
+  <%= f.text_area :content %>
+  <%= f.hidden_field :post_id, :value => @post.id %>
+  <%= f.submit %>
+<% end %>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
